--- a/pom.xml
+++ b/pom.xml
@@ -31,7 +31,7 @@
 		<maven.compiler.source>12</maven.compiler.source>
 		<maven.compiler.target>12</maven.compiler.target>
 
-		<webtools.version>5.2.0-SNAPSHOT</webtools.version>
+		<webtools.version>5.2.2</webtools.version>
 
 		<testng.version>6.14.3</testng.version>
 		<assertj.version>3.11.1</assertj.version>
